--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -137,6 +137,7 @@ div.clouds {
     padding-right: 100vw;
 
     &.road-1 {
+      z-index: 20;
       left: 50%;
       margin-left: -125vw;
       width: 250vw;
